Simplified Dockerfile, moved to new WF and Fedora.